# cumulus-library-data-metrics

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  pypi.yaml
cumulus_library_data_metrics/: __init__.py  attachment_utils.jinja  base.py  base.summary.jinja  db_utils.jinja  gen_prefix.py  manifest.toml  resource_info.py  systems.py  utils.jinja
cumulus_library_data_metrics/c_attachment_count/: README.md  c_attachment_count.jinja  c_attachment_count.py
cumulus_library_data_metrics/c_content_type_use/: README.md  c_content_type_use.jinja  c_content_type_use.py
cumulus_library_data_metrics/c_pt_count/: README.md  c_pt_count.jinja  c_pt_count.py
cumulus_library_data_metrics/c_pt_deceased_count/: README.md  c_pt_deceased_count.jinja  c_pt_deceased_count.py
cumulus_library_data_metrics/c_resource_count/: c_resource_count.jinja  c_resource_count.py
cumulus_library_data_metrics/c_resources_per_pt/: README.md  c_resources_per_pt.jinja  c_resources_per_pt.py
cumulus_library_data_metrics/c_system_use/: README.md  c_system_use.jinja  c_system_use.py
cumulus_library_data_metrics/c_term_coverage/: README.md  c_term_coverage.py
cumulus_library_data_metrics/c_us_core_v4_count/: README.md  c_us_core_v4_count.jinja  c_us_core_v4_count.py  mandatory.jinja  must_support.jinja
cumulus_library_data_metrics/data_metrics/: base.py  resource_info.py  utils.jinja
cumulus_library_data_metrics/meta/: dates.jinja  meta.py  version.jinja
cumulus_library_data_metrics/q_date_recent/: README.md  q_date_recent.jinja  q_date_recent.py
cumulus_library_data_metrics/q_ref_target_pop/: q_ref_target_pop.jinja  q_ref_target_pop.py
cumulus_library_data_metrics/q_ref_target_valid/: README.md  q_ref_target_valid.jinja  q_ref_target_valid.py
cumulus_library_data_metrics/q_system_use/: README.md  q_system_use.jinja  q_system_use.py
cumulus_library_data_metrics/q_term_use/: q_term_use.py
cumulus_library_data_metrics/q_valid_us_core_v4/: README.md  q_valid_us_core_v4.jinja  q_valid_us_core_v4.py
cumulus_library_data_metrics/t_us_core_v4/: mandatory.jinja  must_support.jinja  t_us_core_v4.py
cumulus_library_data_metrics/us_core_v4/: allergyintolerance_mandatory.jinja  allergyintolerance_must_support.jinja  condition_mandatory.jinja  condition_must_support.jinja  diagnosticreport_lab_mandatory.jinja  diagnosticreport_lab_must_support.jinja  diagnosticreport_note_mandatory.jinja  diagnosticreport_note_must_support.jinja  diagnosticreport_utils.jinja  documentreference_mandatory.jinja  documentreference_must_support.jinja  encounter_mandatory.jinja  encounter_must_support.jinja  immunization_mandatory.jinja  immunization_must_support.jinja  medication_mandatory.jinja  medication_must_support.jinja  medicationrequest_mandatory.jinja  medicationrequest_must_support.jinja  observation_laboratory_mandatory.jinja  observation_laboratory_must_support.jinja  observation_smoking_status_mandatory.jinja  observation_smoking_status_must_support.jinja  observation_vital_signs_mandatory.jinja  observation_vital_signs_must_support.jinja  patient_mandatory.jinja  patient_must_support.jinja  procedure_mandatory.jinja  procedure_must_support.jinja  profiles.py  slice.jinja  utils.jinja
data_metrics/: .sqlfluff  base.py  base.summary.jinja  manifest.toml  resource_info.py  utils.jinja
data_metrics/c_pt_count/: c_pt_count.jinja  c_pt_count.py
data_metrics/c_pt_deceased_count/: c_pt_deceased_count.jinja  c_pt_deceased_count.py
data_metrics/c_resource_count/: c_resource_count.jinja  c_resource_count.py
data_metrics/c_resources_per_pt/: README.md  c_resources_per_pt.jinja  c_resources_per_pt.py
quality/: base.py  base.summary.jinja  c_pt_count.py  c_pt_deceased_count.sql  c_resource_count.jinja  c_resource_count.py  c_term_coverage.jinja  c_term_coverage.py  manifest.toml  metadata.sql  q_element_present.py  q_ref_target_pop.jinja  q_ref_target_pop.py  q_ref_target_valid.jinja  q_ref_target_valid.py  q_ref_target_valid.summary.jinja  q_term_use.jinja  q_term_use.py  q_valid_us_core_v4.jinja  q_valid_us_core_v4.py  utils.jinja
reporting/: .gitignore  README.md  exploration.ipynb  observablehq.config.js  package-lock.json
tests/: test_metrics.py
(+417 files in other folders)
