[project]
name = "cumulus-library-data-metrics"
requires-python = ">= 3.10"
dependencies = [
    "cumulus-library >= 2.3, < 3",
]
description = "Data quality and characterization metrics for Cumulus"
readme = "README.md"
license = { text="Apache License 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.urls]
Home = "https://smarthealthit.org/cumulus/"
Documentation = "https://docs.smarthealthit.org/cumulus/"
Source = "https://github.com/smart-on-fhir/cumulus-library-data-metrics"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "tests/",
    "LICENSE",
]

[project.optional-dependencies]
tests = [
    "ddt",
    "pytest",
]
dev = [
    "pre-commit",
    "ruff == 0.4.4",  # sync with .pre-commit-config.yaml
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "A",  # prevent using keywords that clobber python builtins
    "B",  # bugbear: security warnings
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "ISC",  # implicit string concatenation
    "PLE",  # pylint errors
    "RUF",  # the ruff developer's own rules
    "UP",  # alert you when better syntax is available in your python version
]
ignore = [
# Recommended ingore from `ruff format` due to in-project conflicts with check.
# It's expected that this will be fixed in the coming months.
    "ISC001"
]
