[project]
name = "cumulus-library-data-metrics"
requires-python = ">= 3.11"
dependencies = [
    "cumulus-library >= 4, < 5",
]
description = "Data quality and characterization metrics for Cumulus"
readme = "README.md"
license = { text="Apache License 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.urls]
Home = "https://smarthealthit.org/cumulus/"
Documentation = "https://docs.smarthealthit.org/cumulus/"
Source = "https://github.com/smart-on-fhir/cumulus-library-data-metrics"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "tests/",
    "LICENSE",
]

[project.optional-dependencies]
tests = [
    "ddt",
    "pytest",
]
dev = [
    "pre-commit",
    # Ruff is using minor versions for breaking changes until their 1.0 release.
    # See https://docs.astral.sh/ruff/versioning/
    "ruff < 0.8",  # keep in rough sync with pre-commit-config.yaml
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
allowed-confusables = ["’"]  # allow proper apostrophes
select = [
    "A",  # prevent using keywords that clobber python builtins
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "PLE",  # pylint errors
    "RUF",  # the ruff developer's own rules
    "S",  # bandit security warnings
    "UP",  # alert you when better syntax is available in your python version
]
